--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^2.1.0 # load fonts
+  google_fonts: ^4.0.4 # load fonts
   flutter_svg: ^0.22.0 # load svg image
   carousel_slider: ^4.0.0 # image slider
   cupertino_icons: ^1.0.2
+  font_awesome_flutter: ^9.2.0 # font awesome
+  flutter_staggered_grid_view: ^0.6.2 # staggered gridview
 
 dev_dependencies:
   flutter_test:
