--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^9.2.0 # font awesome
   flutter_staggered_grid_view: ^0.6.2 # staggered gridview
+  number_paginator: ^0.2.3 # number page
 
 dev_dependencies:
   flutter_test:
@@ -29,6 +30,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - json/
     - res/
     - res/icons/
     - res/images/
