--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,5 @@
 name: open_fashion
 description: A new Flutter project.
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
@@ -19,6 +17,9 @@ dependencies:
   font_awesome_flutter: ^9.2.0 # font awesome
   flutter_staggered_grid_view: ^0.6.2 # staggered gridview
   number_paginator: ^0.2.3 # number page
+  intl_utils: ^2.8.3
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -31,6 +32,8 @@ flutter:
 
   assets:
     - lib/json/
-    - res/
-    - res/icons/
-    - res/images/
+    - lib/res/
+    - lib/res/icons/
+    - lib/res/images/
+flutter_intl:
+  enabled: true
