--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,10 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2 # staggered gridview
   number_paginator: ^0.2.3 # number page
   intl_utils: ^2.8.3
+  
   flutter_localizations:
     sdk: flutter
+  firebase_storage: ^11.2.3
 
 dev_dependencies:
   flutter_test:
